helm/macos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: macos
  namespace: macos
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: macos.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: macos
            port:
              number: 5800
